--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     <ul class="nav nav-pills">
       <li class="nav-item boton-perfil"><a id="boton-perfil" class="nav-link active" aria-current="page"
           _msttexthash="59059" _msthash="9">Sobre mi</a></li>
-      <li class="nav-item"><a href="#" class="nav-link" _msttexthash="136006" _msthash="10">Habilidades</a></li>
-      <li class="nav-item"><a href="#" class="nav-link" _msttexthash="95589" _msthash="11">Proyectos</a></li>
-      <li class="nav-item"><a href="#" class="nav-link" _msttexthash="425438" _msthash="12">Testimonios</a></li>
-      <li class="nav-item"><a href="#" class="nav-link" _msttexthash="107419" _msthash="13">Contacto</a></li>
+      <li class="nav-item"><a href="#habilidades" class="nav-link" _msttexthash="136006" _msthash="10">Habilidades</a></li>
+      <li class="nav-item"><a href="#proyectos" class="nav-link" _msttexthash="95589" _msthash="11">Proyectos</a></li>
+      <li class="nav-item"><a href="#testimonios" class="nav-link" _msttexthash="425438" _msthash="12">Testimonios</a></li>
+      <li class="nav-item"><a href="#contacto" class="nav-link" _msttexthash="107419" _msthash="13">Contacto</a></li>
     </ul>
   </header>
 
   <main>
     <!--Hero-->
-    <div class="hero">
+    <div id="Sobremi" class="hero">
       <div class="px-4 py-5 my-5 text-center">
         <img class="d-block mx-auto mb-4  rounded-circle" src="assets/foto2.jpeg" alt="" width="200">
         <h1 class="h1 fw-bold text-body-emphasis" _msttexthash="244114" _msthash="7">Rebeca Delgado González
@@ -64,8 +64,8 @@
     </div>
 
     <!--Habilidades-->
-    <div class="caja-habilidades">
-      <div class="habilidades container px-4 py-5" id="hanging-icons">
+    <div id="habilidades" class="caja-habilidades">
+      <div class="#habilidades container px-4 py-5" id="hanging-icons">
         <h2 class="pb-2 border-bottom" _msttexthash="290940" _msthash="18">Habilidades</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="col d-flex align-items-start">
@@ -179,7 +179,7 @@
     </div>
 
     <!--Carrusel Testimonios-->
-    <div id="Testimonios" class="testimonios container mt-5">
+    <div id="testimonios" class="testimonios container mt-5">
       <h2 class="pb-4 border-bottom">Testimonios</h2>
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
