--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
             nuevo. Motivada por fusionar los conocimientos en tecnología como en medicina, para el apoyo a los futuros,
             estudiantes y programadores. </p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4 boton-cv" _msttexthash="156884"
-              _msthash="10">Conoce mi trayectoria</button>
+             <button type="button" class="btn btn-outline-secondary btn-lg px-4 boton-cv" >
+              <a href="https://drive.google.com/file/d/13ZLNzHbwFdba9DEoUaNKQe6g0GzeC6qs/view?usp=sharing" style="text-decoration: none; color: #fff" >Conoce mi
+                trayectoria</a></button>
           </div>
         </div>
       </div>
