--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     <ul class="nav nav-pills">
       <li class="nav-item boton-perfil"><a id="boton-perfil" class="nav-link active" aria-current="page"
           _msttexthash="59059" _msthash="9">Sobre mi</a></li>
-      <li class="nav-item"><a href="#habilidades" class="nav-link" _msttexthash="136006" _msthash="10">Habilidades</a></li>
+      <li class="nav-item"><a href="#habilidades" class="nav-link" _msttexthash="136006" _msthash="10">Habilidades</a>
+      </li>
       <li class="nav-item"><a href="#proyectos" class="nav-link" _msttexthash="95589" _msthash="11">Proyectos</a></li>
-      <li class="nav-item"><a href="#testimonios" class="nav-link" _msttexthash="425438" _msthash="12">Testimonios</a></li>
+      <li class="nav-item"><a href="#testimonios" class="nav-link" _msttexthash="425438" _msthash="12">Testimonios</a>
+      </li>
       <li class="nav-item"><a href="#contacto" class="nav-link" _msttexthash="107419" _msthash="13">Contacto</a></li>
     </ul>
   </header>
@@ -56,8 +58,8 @@
             nuevo. Motivada por fusionar los conocimientos en tecnología como en medicina, para el apoyo a los futuros,
             estudiantes y programadores. </p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-             <button type="button" class="btn btn-outline-secondary btn-lg px-4 boton-cv" >
-              <a href="https://drive.google.com/file/d/13ZLNzHbwFdba9DEoUaNKQe6g0GzeC6qs/view?usp=sharing" style="text-decoration: none; color: #fff" >Conoce mi
+            <button type="button" class="btn btn-outline-secondary btn-lg px-4 boton-cv" >
+              <a href="https://drive.google.com/file/d/13ZLNzHbwFdba9DEoUaNKQe6g0GzeC6qs/view?usp=sharing"  style="text-decoration: none; color: #fff" >Conoce mi
                 trayectoria</a></button>
           </div>
         </div>
